bug fixes and single command to build exe with dependencies #38